# mini-transit

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: main.yml
data/: config.json
data/Lausanne/: Lausanne.geojson  Lausanne_time_dependent_demands.csv  design_template_7-10.json  fixed_route_services.json  fixed_routes.json  services.json  services1.json  services_7-10.json  services_former.json  services_multiple_components_test.json
data/Renens/: Renens.geojson  Renens_time_dependent_demands.csv
data/simulation_results/: Lausanne_hour5_20251217_225611.json
src/: __init__.py  action.py  apiserver.py  demand.py  fixed_route_service.py  hex.py  models.py  network.py  route.py  sampler.py  service.py  simulation.py  takeservice.py  wait.py  walk.py
src/actions/: __init__.py  action.py  ride.py  wait.py  walk.py
src/data/simulation_reports/: Lausanne_hours7to10_20260412_114946_fleet_operations.csv  Lausanne_hours7to10_20260412_114946_overview.csv  Lausanne_hours7to10_20260412_114946_spatial_hex.csv  Lausanne_hours7to10_20260412_114946_temporal_dynamics.csv  Lausanne_hours7to10_20260412_114946_top_od_pairs.csv
src/minitransit_simulation/: __init__.py  apiserver_old.py  convert_services.py  graph.py  models.py  network.py  report_generator - User Guide.md  report_generator.py  serialization.py  simulation.py  simulation_runner.py
src/minitransit_simulation/actions/: __init__.py  action.py  ondemand_ride.py  ride.py  wait.py  walk.py
src/minitransit_simulation/demand/: __init__.py  demand.py  sampler.py
src/minitransit_simulation/primitives/: __init__.py  hex.py  route.py
src/minitransit_simulation/services/: fixedroute.py  ondemand.py  services_loader.py
src/other/: apiserver.py  utils.py
src/services/: __init__.py  fixedroute.py  ondemand.py  service.py
templates/: index.html  visualization.html
tests/: test_demand_sampler.py  test_fixed_route_service.py
