[tool.poetry]
name = "mini-transit-simulation"
version = "0.1.0"
description = "Simulation designed for EPFL course CIVIL-324: Urban public transport systems."
authors = ["Berke Argin <berke.argin@epfl.ch>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.dependencies]
python = ">=3.12,<4"

# --- Web/API stack ---
fastapi = "0.115.6"
uvicorn = { version = "0.32.0", extras = ["standard"] }
Jinja2 = "3.1.4"

# --- Geospatial & viz ---
geopandas = "0.14.1"
pandas = "2.1.3"
shapely = "2.0.2"
pyproj = "3.6.1"
hvplot = "0.12.1"
networkx = "3.5"
contextily = "1.6.2"
bokeh = "3.8.0"
holoviews = "1.21.0"
panel = "1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api" 