[tool.poetry]
name = "mini-transit-simulation"
version = "0.1.0"
description = "Simulation designed for EPFL course CIVIL-324: Urban public transport systems."
authors = ["Berke Argin <berke.argin@epfl.ch>"]
readme = "README.md"
packages = [{ include = "minitransit_simulation", from = "src" }]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.dependencies]
python = ">=3.12,<4"

# --- Core for the simulation, installed when used as package ---
geopandas = "0.14.4"
pandas = "2.1.3"
shapely = "2.0.2"
pyproj = "3.6.1"
networkx = "3.5"
pydantic = "^2.0"


# --- Optional dependencies for visualization and testing ---
fastapi = { version = "0.115.6", optional = true }
uvicorn = { version = "0.32.0", extras = ["standard"], optional = true }
Jinja2 = { version = "3.1.4", optional = true }
hvplot = { version = "0.12.1", optional = true }
contextily = { version = "1.6.2", optional = true }
bokeh = { version = "3.8.0", optional = true }
holoviews = { version = "1.21.0", optional = true }
panel = { version = "1.8.2", optional = true }
fiona = { version = "^1.10.1", optional = true }
streamlit = { version = "^1.52.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
ipython = "^8.28.0"

[tool.poetry.extras]
test_interface = ["fastapi", "uvicorn", "Jinja2", "hvplot", "contextily", "bokeh", "holoviews", "panel", "fiona", "streamlit"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api" 